--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=fitness
-spring.ai.openai.api-key=sk-F3SMvL31PHEG41cpAf9dFe01B3Bb470e87Eb761849F2C88a
+spring.ai.openai.api-key=xxx
 spring.ai.openai.base-url=https://api.xty.app
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
