--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.ai.openai.api-key=xxx
 spring.ai.openai.base-url=https://api.xty.app
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
+server.port=80
+mybatis.mapper-locations=classpath:Mappers/*.xml
