--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,6 @@ spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
 server.port=80
 mybatis.mapper-locations=classpath:Mappers/*.xml
-spring.datasource.url=jdbc:mysql://localhost:3306/fitness
+spring.datasource.url=jdbc:mysql://localhost:3306/Fitness
 spring.datasource.username=root
-spring.datasource.password=20010918
+spring.datasource.password=
