--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ server.port=80
 mybatis.mapper-locations=classpath:Mappers/*.xml
 spring.datasource.url=jdbc:mysql://localhost:3306/Fitness
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=20010918
